--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass-loader": "^10.1.1",
     "vee-validate": "^3.0.0",
     "vue": "^2.6.14",
+    "vue-agile": "^2.0.0",
     "vue-date-pick": "^1.4.1",
     "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
